# CloudRF-API-clients

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
API v1/: README.md
API v2/: README.md
Slippy maps/: cloudrf.js
Windows/: .~lock.towercoverage.csv#  README.md  cloudrf.ini  custom.json
bash/: README.md  area.bash  area.csv  area_tmpl_A.json  cloudrf.ini  path.bash  path.csv  path_tmpl_A.json
gallery/: Co-site interference Demo.html  Direction Finding Demo.html  Drone detection demo.html  Interference Demo.html  Radar Interference Demo.html  Trilateration Demo.html  index.html
html/: area.html  embedded_map_form.html  pathprofile.html
integrations/: ADSB_demo.py  README.md  demo.cpp
integrations/SSRF/cloudrf/: Cargo.toml
integrations/SSRF/cloudrf/src/: antenna.rs  area.rs  environment.rs  interference.rs  lib.rs  misc.rs  model.rs  multisite.rs  output.rs  receiver.rs  transmitter.rs
integrations/SSRF/openssrf/: Cargo.toml
integrations/SSRF/openssrf/src/: assignment.rs  io.rs  lib.rs  location.rs  serial.rs
integrations/SSRF/openssrf/src/assignment/: config.rs  link.rs  station.rs
integrations/SSRF/openssrf_interference_analysis/: Cargo.toml
integrations/SSRF/openssrf_interference_analysis/src/: main.rs
integrations/SSRF/openssrf_multisite_pipeline/: Cargo.toml
integrations/SSRF/openssrf_multisite_pipeline/src/: convert.rs  main.rs
integrations/SSRF/openssrf_test_xml_generator/: Cargo.toml
integrations/SSRF/openssrf_test_xml_generator/src/: generate.rs  main.rs
javascript/: area.js.html  best_server_map.html  lora_area_map.html  pathprofile.js.html
model-gallery/: index.html
python/: 3sites.csv  CloudRF.py  README.md  area.csv  area.py  area.spec  area_long.csv  automated_frequency_selection.py  autopoints.py  bestserver.py  build.bat  calculate_and_mesh.py  cloudrf.ini  cloudrf.py  coverage.csv  coverage.py  demo_network.csv  link.csv  mesh.py  multisite.csv  network.csv  network.spec  network_to_shapefile.py  path.csv  path.py  pathprofile.csv  pathprofile.py  points.csv  points.py  points.spec  points_A.csv  route.csv  test_area.py  test_network.py
slippy-maps/: CloudRF.js  (+18 more)
(+969 files in other folders)
