[package]
name = "openssrf_interference_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
openssrf = {path = "../openssrf"}
cloudrf = {path = "../cloudrf"}
chrono = "0.4.34"
reqwest = { version = "0.11.24", features = ["blocking"] }
openssrf_to_cloudrf = {path = "../openssrf_to_cloudrf"}
