[package]
name = "openssrf_multisite_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
openssrf = {path = "../openssrf"}
cloudrf = {path = "../cloudrf"}
chrono = "0.4.34"
reqwest = { version = "0.11.24", features = ["blocking"] }
