[package]
name = "openssrf_test_xml_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
openssrf = {path = "../openssrf"}
rand = "0.8.5"
rand_distr = "0.4.3"
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
serde = { version = "1.0.196", features = ["derive"] }
